# jetson-ffmpeg

./: CMakeLists.txt  README.md  ffpatch.sh
ffmpeg_dev/: update_patch.sh
ffmpeg_dev/common/libavcodec/: nvmpi_dec.c  nvmpi_enc.c
ffmpeg_patches/: ffmpeg4.2_nvmpi.patch  ffmpeg4.4_nvmpi.patch  ffmpeg6.0_nvmpi.patch
include/: NVMPI_frameBuf.hpp  nvmpi.h
src/: NVMPI_frameBuf.cpp  nvmpi_dec.cpp  nvmpi_enc.cpp
stubs/: libnvbuf_utils.so.1.0.0  libnvbufsurface.so.1.0.0  libnvbufsurftransform.so.1.0.0  libv4l2.so.0
